@@ -4,11 +4,14 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import yongin.Yongnuri._Campus.domain.*;
 import yongin.Yongnuri._Campus.domain.BookMarks;
 import yongin.Yongnuri._Campus.domain.Image;
 import yongin.Yongnuri._Campus.domain.Notice;
 import yongin.Yongnuri._Campus.dto.bookmark.BookmarkRequestDto;
 import yongin.Yongnuri._Campus.dto.bookmark.BookmarkResponseDto;
+import yongin.Yongnuri._Campus.repository.*;
+import jakarta.persistence.EntityNotFoundException;
 import yongin.Yongnuri._Campus.repository.BookMarksRepository;
 import yongin.Yongnuri._Campus.repository.ImageRepository;
 import yongin.Yongnuri._Campus.repository.NoticeRepository;
@@ -24,29 +27,41 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class BookmarkService {
 
-    private final BookMarksRepository bookmarkRepository;
-    private final NoticeRepository noticeRepository; // NoticeRepository만 필요
+    private final BookmarkRepository bookmarkRepository;
+    private final UsedItemRepository usedItemRepository;
+    private final LostItemRepository lostItemRepository;
+    private final GroupBuyRepository groupBuyRepository;
+    private final NoticeRepository noticeRepository;
     private final ImageRepository imageRepository;
-
+//관심목록추가
     @Transactional
     public boolean addBookmark(Long userId, BookmarkRequestDto requestDto) {
         String postType = requestDto.getPostType();
         Long postId = requestDto.getPostId();
 
-        // 공지사항 게시글만 존재하는지 확인
-        if ("NOTICE".equals(postType)) {
-            if (!noticeRepository.existsById(postId)) {
-                throw new EntityNotFoundException("존재하지 않는 게시글입니다.");
-            }
-        } else {
-            // 다른 타입은 이 브랜치에서 지원하지 않음
-            throw new IllegalArgumentException("지원하지 않는 게시판 타입입니다.");
-        }
+        boolean postExists = false;
+        switch (postType) {
+            case "USED_ITEM":
+                postExists = usedItemRepository.existsById(postId);
+                break;
+            case "LOST_ITEM":
+                postExists = lostItemRepository.existsById(postId);
+                break;
+            case "GROUP_BUY":
+                postExists = groupBuyRepository.existsById(postId);
+                break;
+            case "NOTICE":
+                postExists = noticeRepository.existsById(postId);
+                break;
 
+        }
+        if (!postExists) {
+            throw new EntityNotFoundException("존재하지 않는 게시글입니다.");
+        }
         boolean isAlreadyBookmarked = bookmarkRepository.existsByUserIdAndPostTypeAndPostId(userId, postType, postId);
 
         if (!isAlreadyBookmarked) {
-            BookMarks bookmark = BookMarks.builder()
+            Bookmark bookmark = Bookmark.builder()
                     .userId(userId)
                     .postType(postType)
                     .postId(postId)
@@ -56,10 +71,10 @@ public class BookmarkService {
         }
         return false;
     }
+//관심목록삭제
 
     @Transactional
     public void removeBookmark(Long userId, BookmarkRequestDto requestDto) {
-        // 이 메서드는 이미 범용적이므로 수정할 필요가 없습니다.
         boolean bookmarkExists = bookmarkRepository.existsByUserIdAndPostTypeAndPostId(
                 userId, requestDto.getPostType(), requestDto.getPostId());
 
@@ -71,32 +86,76 @@ public class BookmarkService {
         }
     }
 
+  //관심목록조회
     public List<BookmarkResponseDto> getMyBookmarks(Long userId, String postType) {
-        // "NOTICE" 타입이 아닌 요청은 빈 리스트를 반환
-        if (!"NOTICE".equals(postType)) {
-            return Collections.emptyList();
-        }
-
-        List<BookMarks> bookmarks = bookmarkRepository.findByUserIdAndPostTypeOrderByCreatedAtDesc(userId, postType);
+        List<Bookmark> bookmarks = bookmarkRepository.findByUserIdAndPostTypeOrderByCreatedAtDesc(userId, postType);
         if (bookmarks.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        List<Long> postIds = bookmarks.stream().map(BookMarks::getPostId).collect(Collectors.toList());
+        List<Long> postIds = bookmarks.stream().map(Bookmark::getPostId).collect(Collectors.toList());
 
-        Map<Long, Notice> itemMap = noticeRepository.findAllById(postIds).stream()
-                .collect(Collectors.toMap(Notice::getId, Function.identity()));
-        Map<Long, String> thumbnailMap = imageRepository.findByTypeAndTypeIdInAndSequence("NOTICE", postIds, 1).stream()
-                .collect(Collectors.toMap(Image::getTypeId, Image::getImageUrl));
+        if ("USED_ITEM".equals(postType)) {
+            Map<Long, UsedItem> itemMap = usedItemRepository.findAllById(postIds).stream()
+                    .collect(Collectors.toMap(UsedItem::getId, item -> item));
+            Map<Long, String> thumbnailMap = imageRepository.findByTypeAndTypeIdInAndSequence("USED_ITEM", postIds, 1).stream()
+                    .collect(Collectors.toMap(Image::getTypeId, Image::getImageUrl));
 
-        return bookmarks.stream()
-                .map(bookmark -> {
-                    Notice item = itemMap.get(bookmark.getPostId());
-                    if (item == null) return null;
-                    String thumbnailUrl = thumbnailMap.get(item.getId());
-                    return BookmarkResponseDto.from(item, thumbnailUrl, bookmark);
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+            return bookmarks.stream()
+                    .map(bookmark -> {
+                        UsedItem item = itemMap.get(bookmark.getPostId());
+                        if (item == null) return null;
+                        String thumbnailUrl = thumbnailMap.get(item.getId());
+                        return BookmarkResponseDto.from(item, thumbnailUrl, bookmark);
+                    })
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+
+        } else if ("LOST_ITEM".equals(postType)) {
+            Map<Long, LostItem> itemMap = lostItemRepository.findAllById(postIds).stream()
+                    .collect(Collectors.toMap(LostItem::getId, item -> item));
+            Map<Long, String> thumbnailMap = imageRepository.findByTypeAndTypeIdInAndSequence("LOST_ITEM", postIds, 1).stream()
+                    .collect(Collectors.toMap(Image::getTypeId, Image::getImageUrl));
+
+            return bookmarks.stream()
+                    .map(bookmark -> {
+                        LostItem item = itemMap.get(bookmark.getPostId());
+                        if (item == null) return null;
+                        String thumbnailUrl = thumbnailMap.get(item.getId());
+                        return BookmarkResponseDto.from(item, thumbnailUrl, bookmark);
+                    })
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        }else if ("GROUP_BUY".equals(postType)) {
+            Map<Long, GroupBuy> itemMap = groupBuyRepository.findAllById(postIds).stream()
+                    .collect(Collectors.toMap(GroupBuy::getId, item -> item));
+            Map<Long, String> thumbnailMap = imageRepository.findByTypeAndTypeIdInAndSequence("GROUP_BUY", postIds, 1).stream()
+                    .collect(Collectors.toMap(Image::getTypeId, Image::getImageUrl));
+            return bookmarks.stream()
+                    .map(bookmark -> {
+                        GroupBuy item = itemMap.get(bookmark.getPostId());
+                        if (item == null) return null;
+                        String thumbnailUrl = thumbnailMap.get(item.getId());
+                        return BookmarkResponseDto.from(item, thumbnailUrl, bookmark);
+                    })
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        }else if ("NOTICE".equals(postType)) {
+                Map<Long, Notice> itemMap = noticeRepository.findAllById(postIds).stream()
+                        .collect(Collectors.toMap(Notice::getId, item -> item));
+                Map<Long, String> thumbnailMap = imageRepository.findByTypeAndTypeIdInAndSequence("NOTICE", postIds, 1).stream()
+                        .collect(Collectors.toMap(Image::getTypeId, Image::getImageUrl));
+                return bookmarks.stream()
+                        .map(bookmark -> {
+                            Notice item = itemMap.get(bookmark.getPostId());
+                            if (item == null) return null;
+                            String thumbnailUrl = thumbnailMap.get(item.getId());
+                            return BookmarkResponseDto.from(item, thumbnailUrl, bookmark);
+                        })
+                        .filter(Objects::nonNull)
+                        .collect(Collectors.toList());
+        }
+
+        return List.of();
     }
 }
